--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_core: ^0.3.4
   firebase_auth: ^0.8.4+4
   cloud_firestore: ^0.9.13+1
+  readmore: ^1.0.1
 
 dev_dependencies:
   flutter_test:
